Update-ProjectList-Page

--- a/Frontend/src/assets/i18n/fr.json
+++ b/Frontend/src/assets/i18n/fr.json
@@ -1,6 +1,37 @@
 {
-  "HOME": {
-    "TITLE": "Bonjour Angular avec ngx-translate !",
-    "SELECT": "Changer la langue"
-  }
+  "Project Information Management": "Gestion des informations du projet",
+  "Project number, name, customer": "Numéro de projet, nom, client",
+  "Project List": "Liste de projets",
+  "Project Status": "L'état du projet",
+  "Reset Search": "Réinitialiser la recherche",
+  "Number": "Nombre",
+  "Name": "Nom",
+  "Status": "Statut",
+  "Customer": "Client",
+  "Start Date": "Date de début",
+  "No data matching the filter": "Aucune donnée correspondant au filtre",
+  "Project": "Projet",
+  "Supplier": "Fournisseur",
+  "New": "Neuf",
+  "Project number": "Numéro de projet",
+  "Project name": "Nom du projet",
+  "Group": "Groupe",
+  "Members": "Membres",
+  "--Select--": "--Sélectionner--",
+  "Planned": "Prévu",
+  "In Progress": "En cours",
+  "Finished": "Fini",
+  "Start date": "Date de début",
+  "End date": "Date de fin",
+  "End date must not be smaller than start date": "La date de fin ne doit pas être inférieure à la date de début",
+  "Please enter all the mandatory fields (*)": "Veuillez renseigner tous les champs obligatoires (*)",
+  "Cancle": "Annuler",
+  "New Project": "Nouveau projet",
+  "Edit Project": "Modifier le projet",
+  "Create": "Créer",
+  "Update": "Mise à jour",
+  "Help": "Aider",
+  "Log out": "Se déconnecter",
+  "items selected": "articles sélectionnés",
+  "Delete selected items": "Supprimer l'élément sélectionné"
 }
