Add DropDown status filter

--- a/Frontend/src/assets/i18n/fr.json
+++ b/Frontend/src/assets/i18n/fr.json
@@ -41,5 +41,6 @@
   "Please contact your administrator": "Veuillez contacter votre administrateur",
   "or": "ou",
   "back to search project": "retour au projet de recherche",
-  "The project number already exists. Please select a different project number.": "Le numéro de projet existe déjà. Veuillez sélectionner un autre numéro de projet."
+  "The project number already exists. Please select a different project number.": "Le numéro de projet existe déjà. Veuillez sélectionner un autre numéro de projet.",
+  "data.message": "Une autre modification a été apportée à ce projet. Cette page sera rechargée pour afficher les dernières données."
 }
